NetBSD Problem Report #42720

From www@NetBSD.org  Tue Feb  2 09:55:35 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7FED863B9FC
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2010 09:55:35 +0000 (UTC)
Message-Id: <20100202095535.5848563B886@www.NetBSD.org>
Date: Tue,  2 Feb 2010 09:55:35 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing printf in sys/compat/linux/arch/powerpc/linux_machdep.c
X-Send-Pr-Version: www-1.0

>Number:         42720
>Category:       port-powerpc
>Synopsis:       Missing printf in sys/compat/linux/arch/powerpc/linux_machdep.c
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-powerpc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 10:00:00 +0000 2010
>Closed-Date:    Tue Feb 02 15:02:34 +0000 2010
>Last-Modified:  Tue Feb 02 15:05:06 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing printf in sys/compat/linux/arch/powerpc/linux_machdep.c found by cppcheck.
>How-To-Repeat:

>Fix:
diff -u -r1.40 linux_machdep.c
--- sys/compat/linux/arch/powerpc/linux_machdep.c	23 Nov 2009 00:46:07 -0000	1.40
+++ sys/compat/linux/arch/powerpc/linux_machdep.c	1 Dec 2009 09:38:24 -0000
@@ -302,6 +302,7 @@

 	tf = trapframe(l);
 #ifdef DEBUG_LINUX
+	printf("linux_sys_sigreturn: trapframe=0x%lx scp=0x%lx\n",
 	    (unsigned long)tf, (unsigned long)scp);
 #endif

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 02 Feb 2010 15:02:34 +0000
State-Changed-Why:
Committed, thanks!


From: Thomas Klausner <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42720 CVS commit: src/sys/compat/linux/arch/powerpc
Date: Tue, 2 Feb 2010 15:02:08 +0000

 Module Name:	src
 Committed By:	wiz
 Date:		Tue Feb  2 15:02:08 UTC 2010

 Modified Files:
 	src/sys/compat/linux/arch/powerpc: linux_machdep.c

 Log Message:
 Missing printf in sys/compat/linux/arch/powerpc/linux_machdep.c
 found by cppcheck and reported by Henning Petersen in PR 42720.


 To generate a diff of this commit:
 cvs rdiff -u -r1.40 -r1.41 src/sys/compat/linux/arch/powerpc/linux_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.