Missing printf in sys/compat/linux/arch/powerpc/linux_machdep.c found by cppcheck and reported by Henning Petersen in PR 42720.