sys/compat/linux/arch/powerpc/linux_machdep.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: linux_machdep.c,v 1.40 2009/11/23 00:46:07 rmind Exp $ */
+/*	$NetBSD: linux_machdep.c,v 1.41 2010/02/02 15:02:07 wiz Exp $ */
 
 /*-
  * Copyright (c) 1995, 2000, 2001 The NetBSD Foundation, Inc.
@@ -30,7 +30,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: linux_machdep.c,v 1.40 2009/11/23 00:46:07 rmind Exp $");
+__KERNEL_RCSID(0, "$NetBSD: linux_machdep.c,v 1.41 2010/02/02 15:02:07 wiz Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -302,6 +302,7 @@ linux_sys_rt_sigreturn(struct lwp *l, const struct linux_sys_rt_sigreturn_args *
 
 	tf = trapframe(l);
 #ifdef DEBUG_LINUX
+	printf("linux_sys_rt_sigreturn: trapframe=0x%lx scp=0x%lx\n",
 	    (unsigned long)tf, (unsigned long)scp);
 #endif
 
